更新部分接口调试

--- a/src/app/core/modules/components/swipe-checkbox/swipe-checkbox.component.html
+++ b/src/app/core/modules/components/swipe-checkbox/swipe-checkbox.component.html
@@ -1,6 +1,6 @@
 <section class="swipe-checkbox-component">
   <section class="check-box-group">
-    <label [ngClass]="['check-item', item.isCheck ? 'check' : 'no-check']" *ngFor="let item of checkboxRender">
+    <label (click)="onClickChange(item)" [ngClass]="['check-item', item.isCheck ? 'check' : 'no-check']" *ngFor="let item of checkboxRender">
       <span class="check-box">
         <input type="checkbox" [(ngModel)]="item.isCheck" class="check-box-input">
         <span class="check-inner"></span>
