--- a/src/app/pages/user/messages/messages.page.html
+++ b/src/app/pages/user/messages/messages.page.html
@@ -11,11 +11,12 @@
       refreshingText="加载中...">
     </ion-refresher-content>
   </ion-refresher>
-  <ion-list class="content">
-    <swipe-info-cell></swipe-info-cell>
-    <swipe-info-cell></swipe-info-cell>
-    <swipe-info-cell></swipe-info-cell>
+  <ion-list class="content" *ngIf="renderArray.length; else tempNullContext">
+    <swipe-info-cell [renderInfo]="item" *ngFor="let item of renderArray"></swipe-info-cell>
   </ion-list>
+  <ng-template #tempNullContext>
+    <swipe-null></swipe-null>
+  </ng-template>
   <ion-infinite-scroll (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
