更新部分正则校验

--- a/src/app/core/modules/components/swipe-header/swipe-header.component.html
+++ b/src/app/core/modules/components/swipe-header/swipe-header.component.html
@@ -7,7 +7,7 @@
       <ng-content select="[name=left]"></ng-content>
     </ng-container>
     <ng-container v-else>
-      <section class="public-left-slot" (click)="handlerLeftEvent()" *ngIf="isBack">
+      <section class="public-left-slot" (click)="handlerLeftEvent($event)" *ngIf="isBack">
         <ion-img class="public-left-icon" [src]="renderLeftIcon"></ion-img>
       </section>
     </ng-container>
