--- a/src/app/pages/account/register/register.page.html
+++ b/src/app/pages/account/register/register.page.html
@@ -6,7 +6,16 @@
     <form [formGroup]="registerForm" (submit)="submitChange()">
       <section class="form-model">
         <section class="custom-input">
-          <swipe-input formControlName="nickname" type="text" placeholder="请输入您的姓名" [pattern]="'^.{2,6}$'" [isClear]="true" [isRequired]="false"></swipe-input>
+          <swipe-input formControlName="nickname" type="text" placeholder="请输入您的用户名" [pattern]="'^[a-zA-Z]{1}([a-zA-Z0-9_]){4,14}|(^[\u4E00-\uFA29]{1}+[a-zA-Z0-9\u4E00-\uFA29]{2,7})$'" [isClear]="true" [isRequired]="false"></swipe-input>
+        </section>
+        <section class="custom-input">
+          <swipe-input formControlName="credential" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
+        </section>
+        <section class="custom-input">
+          <swipe-input formControlName="credential" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
+        </section>
+        <section class="custom-input">
+          <swipe-input formControlName="recommendCode" type="text" placeholder="请输入邀请码" [isClear]="true"></swipe-input>
         </section>
         <section class="custom-input">
           <swipe-input formControlName="identifier" type="number" placeholder="请输入手机号" [isClear]="true" [pattern]="'^1[3-9]{1}[0-9]{9}$'" [isRequired]="false"></swipe-input>
@@ -17,6 +26,7 @@
             formControlName="smsCode"
             placeholder="请输入验证码"
             [maxLength]="6"
+            [pattern]="'^[0-9]{6}$'"
             [isClear]="true"
             [isSuffix]="true">
             <span *ngIf="!getCodeStatus; else elseTemplate" name="suffix" class="label-text" (click)="fetchCodeEvent()">获取验证码</span>
@@ -24,15 +34,6 @@
               <span name="suffix" class="label-text">{{timeOut}}S后重新获取</span>
             </ng-template>
           </swipe-input>
-        </section>
-        <section class="custom-input">
-          <swipe-input formControlName="credential" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
-        </section>
-        <section class="custom-input">
-          <swipe-input formControlName="credential" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
-        </section>
-        <section class="custom-input">
-          <swipe-input formControlName="recommendCode" type="text" placeholder="请输入邀请码" [isClear]="true"></swipe-input>
         </section>
       </section>
       <section class="submit-info">
